--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,6 +1,8 @@
 
 <!-- <router-outlet /> -->
-<div *ngFor="let task of tasks$ |async" class="task">
+<div *ngIf="loading$ | async">Loading...</div>
+<div *ngIf="error$ | async as error">{{ error }}</div>
+<div *ngFor="let task of tasks$ | async" class="task">
   <h3>{{ task.title }}</h3>
   <p>{{ task.description }}</p>
   <button (click)="editTask(task)">Update</button>
