--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,11 +1,9 @@
-
-<!-- <router-outlet /> -->
-<div *ngIf="loading$ | async">Loading...</div>
-<div *ngIf="error$ | async as error">{{ error }}</div>
-<div *ngFor="let task of tasks$ | async" class="task">
-  <h3>{{ task.title }}</h3>
-  <p>{{ task.description }}</p>
-  <button (click)="editTask(task)">Update</button>
-  <button (click)="removeTask(task.id)">Delete</button>
+<div *ngIf="loading$ | async" class="text-center text-blue-500">Loading...</div>
+<div *ngIf="error$ | async as error" class="text-center text-red-500">{{ error }}</div>
+<div *ngFor="let task of tasks$ | async" class="task p-4 border-b border-gray-200">
+  <h3 class="text-lg font-semibold">{{ task.id }} - {{ task.title }}</h3>
+  <p class="text-gray-600">{{ task.description }}</p>
+  <button (click)="editTask(task)" class="bg-blue-500 text-white px-4 py-2 rounded">Update</button>
+  <button (click)="removeTask(task.id)" class="bg-red-500 text-white px-4 py-2 rounded">Delete</button>
 </div>
-<button (click)="addNewTask()">Add New Task</button>
+<button (click)="addNewTask()" class="bg-green-500 text-white px-4 py-2 rounded mt-4">Add New Task</button>
